// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`performance should constrain the buffer size 1`] = `
<body>
  
            
  <form
    action=""
  >
    
                
    <label
      for="input-01"
    >
      Username
      <input
        data-ddg-inputtype="credentials.username"
        id="input-01"
        type="text"
      />
    </label>
    
                
    <label
      for="input-02"
    >
      Password
      <input
        data-ddg-inputtype="credentials.password.new"
        id="input-02"
        type="password"
      />
    </label>
    
                
    <label
      for="input-03"
    >
      <input
        data-ddg-inputtype="unknown"
        id="input-03"
        type="text"
      />
    </label>
    
                
    <label
      for="input-04"
    >
      <input
        data-ddg-inputtype="unknown"
        id="input-04"
        type="text"
      />
    </label>
    
                
    <label
      for="input-05"
    >
      <input
        data-ddg-inputtype="unknown"
        id="input-05"
        type="text"
      />
    </label>
    
            
  </form>
</body>
`;

exports[`performance should debounce dom lookups 1`] = `
<body>
  
            
  <form
    action=""
  >
    
                
    <label
      for="input-01"
    >
      Username
      <input
        data-ddg-inputtype="credentials.username"
        id="input-01"
        type="text"
      />
    </label>
    
                
    <label
      for="input-02"
    >
      Password
      <input
        data-ddg-inputtype="credentials.password.new"
        id="input-02"
        type="password"
      />
    </label>
    
                
    <label
      for="input-03"
    >
      <input
        data-ddg-inputtype="unknown"
        id="input-03"
        type="text"
      />
    </label>
    
                
    <label
      for="input-04"
    >
      <input
        data-ddg-inputtype="unknown"
        id="input-04"
        type="text"
      />
    </label>
    
                
    <label
      for="input-05"
    >
      <input
        data-ddg-inputtype="unknown"
        id="input-05"
        type="text"
      />
    </label>
    
            
  </form>
</body>
`;

exports[`performance should not scan if above maximum inputs 1`] = `
<body>
  
            
  <form
    action=""
  >
    
                
    <label
      for="input-01"
    >
      Username
      <input
        id="input-01"
        type="text"
      />
    </label>
    
                
    <label
      for="input-02"
    >
      Password
      <input
        id="input-02"
        type="password"
      />
    </label>
    
                
    <label
      for="input-03"
    >
      <input
        id="input-03"
        type="text"
      />
    </label>
    
                
    <label
      for="input-04"
    >
      <input
        id="input-04"
        type="text"
      />
    </label>
    
                
    <label
      for="input-05"
    >
      <input
        id="input-05"
        type="text"
      />
    </label>
    
            
  </form>
</body>
`;

exports[`performance should stop scanning if page grows above maximum forms 1`] = `
<body>
  
            
  <form
    action=""
  >
    
                
    <label
      for="input-01"
    >
      Username
      <input
        id="input-01"
        type="text"
      />
    </label>
    
                
    <label
      for="input-02"
    >
      Password
      <input
        id="input-02"
        type="password"
      />
    </label>
    
                
    <label
      for="input-03"
    >
      <input
        id="input-03"
        type="text"
      />
    </label>
    
                
    <label
      for="input-04"
    >
      <input
        id="input-04"
        type="text"
      />
    </label>
    
                
    <label
      for="input-05"
    >
      <input
        id="input-05"
        type="text"
      />
    </label>
    
            
  </form>
  <form
    action=""
  >
    
                
    <label
      for="input-01"
    >
      Username
      <input
        id="input-01"
        type="text"
      />
    </label>
    
                
    <label
      for="input-02"
    >
      Password
      <input
        id="input-02"
        type="password"
      />
    </label>
    
                
    <label
      for="input-03"
    >
      <input
        id="input-03"
        type="text"
      />
    </label>
    
                
    <label
      for="input-04"
    >
      <input
        id="input-04"
        type="text"
      />
    </label>
    
                
    <label
      for="input-05"
    >
      <input
        id="input-05"
        type="text"
      />
    </label>
    
            
  </form>
</body>
`;

exports[`performance should stop scanning if page grows above maximum inputs 1`] = `
<body>
  
            
  <form
    action=""
  >
    
                
    <label
      for="input-01"
    >
      Username
      <input
        id="input-01"
        type="text"
      />
    </label>
    
                
    <label
      for="input-02"
    >
      Password
      <input
        id="input-02"
        type="password"
      />
    </label>
    
                
    <label
      for="input-03"
    >
      <input
        id="input-03"
        type="text"
      />
    </label>
    
                
    <label
      for="input-04"
    >
      <input
        id="input-04"
        type="text"
      />
    </label>
    
                
    <label
      for="input-05"
    >
      <input
        id="input-05"
        type="text"
      />
    </label>
    
            
    <input
      type="text"
    />
    <input
      type="text"
    />
    <input
      type="text"
    />
  </form>
</body>
`;
